<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground_blur"
    android:orientation="vertical"
    tools:context=".ClassifierActivity"
    android:id="@+id/classifierActivityView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="25dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="90dp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanumgothic"
            android:text="@string/chooseYourImage"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/album"
            android:contentDescription="@string/chooseYourImage"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clickAlbumToUpload" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/howToUse1"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanumgothic"
            android:paddingBottom="10dp"
            android:text="@string/howToUse2"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanumgothic"
            android:paddingBottom="10dp"
            android:text="@string/howToUse3"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanumgothic"
            android:text="@string/howToUse4"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="38dp"
        android:layout_marginBottom="110dp"
        android:contentDescription="@string/login"
        android:src="@drawable/login"
        android:visibility="invisible"
        app:backgroundTint="@color/design_default_color_secondary"
        app:fabSize="mini" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="38dp"
        android:layout_marginBottom="165dp"
        android:contentDescription="@string/login"
        android:src="@drawable/login"
        android:visibility="invisible"
        app:backgroundTint="@color/design_default_color_secondary"
        app:fabSize="mini" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sunrise"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="38dp"
        android:layout_marginBottom="110dp"
        app:fabSize="mini"
        android:visibility="invisible"
        app:backgroundTint="@color/design_default_color_secondary"
        android:contentDescription="@string/sunrise"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/plus"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        app:backgroundTint="@color/design_default_color_secondary"
        android:contentDescription="@string/floatingButton"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>



