<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:orientation="vertical"
    android:background="@drawable/mainbackground"
    tools:context=".MainActivity"
    android:id="@+id/mainActivityView">

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:fontFamily="@font/nanumgothic"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="150dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:fontFamily="@font/nanumgothic"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/white"
        android:fontFamily="@font/nanumgothic"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/up_arrow"
        android:contentDescription="@string/nextPage"
        />

</LinearLayout>