<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpotinfoActivity"
    android:gravity="bottom"
    app:umanoDragView="@id/dragView"
    app:umanoOverlay="true"
    app:umanoParallaxOffset="0dp"
    app:umanoShadowHeight="0dp"
    app:umanoPanelHeight="450dp"
    app:umanoFadeColor="@android:color/transparent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_marginTop="40dp"
            android:drawableLeft="@drawable/back"
            android:layout_gravity="top|left"
            android:background="@android:color/transparent"
            android:drawableTint="@color/white"
            android:layout_marginLeft="15dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/userImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="top|right"
            android:layout_marginRight="15dp"/>

        <!-- <ImageButton-->
        <!-- android:id="@+id/usedrImage"-->
        <!-- android:layout_width="80dp"-->
        <!-- android:layout_height="80dp"-->
        <!-- android:layout_marginTop="40dp"-->
        <!-- style="@style/Widget.MaterialComponents.Button.OutlinedButton"-->
        <!-- android:layout_gravity="top|right"-->
        <!-- android:layout_marginRight="15dp" />-->

        <!-- android:drawableRight="@drawable/album"-->


        <!-- <ImageView-->
        <!-- android:id="@+id/userImage"-->
        <!-- android:layout_width="wrap_content"-->
        <!-- android:layout_height="wrap_content"-->
        <!-- android:src="@drawable/album"-->
        <!-- app:layout_constraintTop_toBottomOf="@+id/addressInfo"-->
        <!-- app:layout_constraintRight_toRightOf="parent"-->
        <!-- app:layout_constraintLeft_toLeftOf="parent"-->
        <!-- app:layout_constraintBottom_toBottomOf="parent"/>-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:orientation="vertical"
            android:layout_gravity="top">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/myviewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/dragView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <!-- android:background="@drawable/roundcorner"-->
        <!-- android:paddingHorizontal="10dp">-->

        <me.relex.circleindicator.CircleIndicator3
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/roundcorner"
            android:paddingHorizontal="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:scaleType="fitCenter"
                android:src="@drawable/minus"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/slideUp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="left"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/placeName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:textColor="@color/cardview_dark_background"
                    android:shadowColor="@color/black"/>
                <TextView
                    android:id="@+id/percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/percent"
                    android:textAlignment="viewStart"
                    android:layout_weight="4"/>
                <!-- android:layout_gravity="right"-->
                <!-- android:layout_marginTop="40dp"/>-->

                <ImageButton
                    android:id="@+id/bookmark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@android:color/transparent"
                    android:layout_weight="1"/>
                <!-- 초기화없음으로 해보자-->
                <!-- android:src="@drawable/bookmarkno"-->


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="@style/Widget.AppCompat.RatingBar.Indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:rating="3"
                    android:stepSize="0.5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:theme="@style/RatingBar"/>

                <TextView
                    android:id="@+id/ratingNum"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:gravity="bottom"
                    android:layout_marginBottom="15dp"
                    android:text="TextView"
                    android:layout_weight="4"/>

                <Button
                    android:id="@+id/switchBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="지도보기" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:padding="10dp">
                <!-- android:background="@drawable/roundcorner"-->

                <View
                    android:layout_width="300dp"
                    android:layout_height="3dp"
                    android:background="@drawable/bottomborder"
                    android:layout_centerHorizontal="true"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/placeDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/loading"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toTopOf="@id/addressInfo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:lineSpacingExtra="3sp"/>

                    <TextView
                        android:id="@+id/addressInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/placeDescription" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapView"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:visibility="gone" />

            </RelativeLayout>



        </LinearLayout>



    </LinearLayout>


</com.sothree.slidinguppanel.SlidingUpPanelLayout>